...
     this.hideSideMenu()
    })
  }

  handlePressLogin = () => {
    this.hideSideMenu()
    launchScreen()
  }
  handlePressRegister = () => {
    this.hideSideMenu()
    registerScreen()
  }
  handlePressForgotPassword = () => {
...
    return (
      <ScrollView style={styles.container}>
        {/* <Image testID='drawerLogo' source={Images.logoJhipster} style={styles.logo} /> */}
        {/* {!this.props.loggedIn && (<DrawerButton testID='loginDrawerButton' text='Entrar' onPress={this.handlePressLogin} />)} */}
        {!this.props.loggedIn && (<DrawerButton testID='registerDrawerButton' text='Cadastre-se' onPress={this.handlePressRegister}/>)}
        {!this.props.loggedIn && (<DrawerButton testID='forgotPasswordDrawerButton' text='Recuperar Senha' onPress={this.handlePressForgotPassword} />)}
        {/* {this.props.loggedIn && (<DrawerButton testID='entitiesDrawerButton' text='Entities' onPress={this.handlePressEntities} />)} */}
{/*
        {this.props.loggedIn && (<DrawerButton testID='entitiesDrawerButton' text='Entities' onPress={this.handlePressEntities} />)}
        {this.props.loggedIn && (<DrawerButton testID='settingsDrawerButton' text='Settings' onPress={this.handlePressSettings} />)} */}
        {this.props.loggedIn && this.props.account.tipoPessoa == 'Macom' && (<DrawerButton testID='agendaDrawerButton' text='Agenda' onPress={this.handlePressAgenda} />)}
        {this.props.loggedIn && (<DrawerButton testID='categoriaDrawerButton' text='Estabelecimentos' onPress={this.handlePressCategoria} />)}
        {this.props.loggedIn && (<DrawerButton testID='cupomDrawerButton' text='Cupons' onPress={this.handlePressCupom} />)}
...
