...
                    text: 'Bem-vindo ao CMT!',
                    alignment: "center",
                    color: Colors.snow
                  },
                  leftButtons: [
                    {
                      id: 'menuButton',
                      icon: Images.menuIcon,
                      color: Colors.snow,
                      testID: 'menuButton'
                    }
                  ]
                }
...
          text: 'Usuarios',
          color: Colors.snow
        },
        rightButtons: [
          {
            id: 'createButton',
            text: 'Create',
            color: Colors.snow
          }
        ]
      }
    }
  }
...
